# psyris-code

./: README.md  pyproject.toml
.drafts/: to_zotero_edirect-pubmed-query.sh
config/: psyris-task.sh  psyris-taskrc
config/psyris-taskdata/: taskchampion.sqlite3
config/task/: taskchampion.sqlite3
data/: _out
notebooks/data_pipelines/: psychedeliquesXlsx.ipynb
resources/: review_process.md
scripts/: activate_env.sh  case_reports_edirect-pubmed-query.sh  edirect-pubmed-query-v1.sh  edirect-pubmed-query.sh  ngram-viewer-script.py  reviewed.sh
src/psyris_code/: __init__.py  utils.py
src/psyris_code/preprocessing/: __init__.py  csv_to_json.py
