[project]
name = "psyris-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matias Ceau", email = "matias@ceau.net" }
]
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.3.3",
    "openai>=1.52.2",
    "pydantic>=2.9.2",
    "pydotenv>=0.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
]
