[project]
name = "psyris-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matias Ceau", email = "matias@ceau.net" }
]
requires-python = ">=3.12"
dependencies = [
    "generativeai>=0.0.1",
    "graphviz>=0.20.3",
    "huggingface>=0.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jsonschema>=4.23.0",
    "mem0ai>=0.1.44",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "ollama>=0.3.3",
    "openai>=1.52.2",
    "openpyxl>=3.1.5",
    "pathlib>=1.0.1",
    "pip>=25.0",
    "pydantic>=2.9.2",
    "pydotenv>=0.0.7",
    "rdflib>=7.1.2",
    "seaborn>=0.13.2",
    "smolagents>=1.3.0",
    "torch>=2.6.0",
    "tqdm>=4.66.6",
    "transformers>=4.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
]
